<resources>
    <string name="app_name">MyAppPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="my_title">My NanoDegree Apps !</string>
    <string name="spotify_button">SPOTIFY STREAMER</string>
    <string name="scores_button">SCORES APP</string>
    <string name="library_button">LIBRARY APP</string>
    <string name="builditbig_button">BUILD IT BIGGER</string>
    <string name="bookreader_button">BOOK READER</string>
    <string name="capstone_button">CAPSTONE: MY OWN APP</string>
</resources>
